# sae-s3-g5

./: .dockerignore  .flake8  .gitignore  README.md  app.conf  app.py  app.wsgi  cleancode.sh  config.py  coverage.xml  db_creation.sql  db_developpement.sql  db_production.sql  docker-compose.dev.yml  docker-compose.yml  dockerfile  generation_xls.py  init.sh  installation.sh  pyproject.toml  redis.conf  requirements.txt  setup.cfg  setup.sh
app/: Dockerfile  app.py  app.wsgi  config.py  entrypoint.sh  requirements.txt
app/controller/: admin.py  api.py  apprentis.py  auth.py  cip.py  educateur_admin.py  educateur_simple.py  (+1 more)
controller/: admin.py  api.py  apprentis.py  auth.py  cip.py  educateur_admin.py  educateur_simple.py  personnel.py
custom_paquets/: app_checker.py  app_utils.py  builder.py  check_requirements.py  converter.py  custom_form.py  decorateur.py  file_getter.py  function_completer_fiches.py  generation_xls.py  gestion_audio.py  gestion_fichiers.py  gestion_filtres_routes.py  gestion_image.py  gestions_erreur.py  getion_logs.py  security.py  tester_usages.py
init/: db_production.sql  init.sh
model/: apprenti.py  assister.py  cip.py  composer.py  cours.py  ficheintervention.py  formation.py  laissertrace.py  materiel.py  personnel.py  pictogramme.py  session.py  shared_model.py  trace.py
model_db/: apprenti.py  archiver.py  assister.py  avoir.py  categorie.py  composer.py  educadmin.py  elementbase.py  elementdefault.py  elementform.py  fiche.py  ficheintervention.py  formation.py  intervention.py  laissertrace.py  personnel.py  pictogramme.py  responsable.py  session.py  shared_model.py  trace.py
nginx/: generate_certificate.py  nginx.conf
scripts/: backup_db.sh  renew_cert.sh
static/: error.json
tests/: conftest.py  utils.py
(+231 files in other folders)
