[tool.poetry]
name = "SAE-S3-G5"
version = "1.0.0"
description = ""
authors = ["FruitPassion <raphael.boudin@protonmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.2.0"
bleach = "^6.1.0"
blinker = "^1.8.2"
click = "^8.1.7"
configparser-crypt = "^1.1.0"
coverage = "^7.6.1"
cryptidy = "^1.2.2"
dnspython = "^2.6.1"
email-validator = "^2.2.0"
faker = "^30.0.0"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-mailman = "^1.1.1"
flask-principal = "^0.4.0"
flask-security-too = "^5.5.2"
flask-session = "^0.8.0"
flask-sqlalchemy = "^3.1.1"
flask-unittest = "^0.1.3"
flask-wtf = "^1.2.1"
gunicorn = "^23.0.0"
idna = "^3.10"
importlib-resources = "^6.4.5"
iniconfig = "^2.0.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
markupsafe = "^2.1.5"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
opencv-python = "^4.10.0.84"
packaging = "^24.1"
passlib = "^1.7.4"
pillow = "^10.4.0"
pluggy = "^1.5.0"
pycryptodomex = "^3.20.0"
pymysql = "^1.1.1"
pytest = "^8.3.3"
pytest-playwright = "^0.5.2"
playwright = "^1.47.0"
pytest-cov = "^5.0.0"
pytest-flask = "^1.3.0"
redis = "^5.0.8"
setuptools = "^75.1.0"
six = "^1.16.0"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
typing-extensions = "^4.12.2"
unidecode = "^1.3.8"
webencodings = "^0.5.1"
werkzeug = "^3.0.4"
wtforms = "^3.1.2"
xlsxwriter = "^3.2.0"
djlint = "^1.35.2"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
build = "^1.0.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 200